[package]
name = "snowflake-proxy"
description = "A Libaray for running a Tor-Snowflake Proxy"
authors = ["Allstreamer"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Allstreamer/snowflake-proxy"
version = "0.0.1"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
webrtc = "0.7"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
url = "2.3"
